# cmd/major/main.go
@@ -23,6 +23,8 @@ func main() {
 	server.HandleFunc("/post/create", service.CreatePost)
 	server.HandleFunc("/post/{postId}", service.GetPostById)
 	server.HandleFunc("/posts/{login}", service.GetPostsByLogin)
+	server.HandleFunc("/post/{postId}/like", service.LikePost)
+	server.HandleFunc("/post/{postId}/view", service.ViewPost)
 	server.HandleFunc("/post/{postId}/update", service.UpdatePost)
 	server.HandleFunc("/post/{postId}/delete", service.DeletePost)
 
